--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Yatharth Mitra",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
