add user and video model

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,8 @@
-PORT = 8000
-MONGODB_URI = mongodb+srv://yatharth:your_password@cluster0.i6jseqs.mongodb.net
+PORT=8000
+MONGODB_URI=mongodb+srv://yatharth:your_password@cluster0.i6jseqs.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN=CHAIaurCode
+ACCESS_TOKEN_EXPIRY=1d
+
+REFRESH_TOKEN_SECRET=CHAIaurCODE123
+REFRESH_TOKEN_EXPIRY=10d
