--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ ACCESS_TOKEN_EXPIRY=1d
 
 REFRESH_TOKEN_SECRET=CHAIaurCODE123
 REFRESH_TOKEN_EXPIRY=10d
+CLOUDINAARY_CLOUD_NAME=streamit , 
+CLOUDINAARY_API_KEY='kuch bhi', 
+CLOUDINAARY_API_SECRET='takeyour own shit
